# PageIndex

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml
data/markdowns/: cognitive-load.md
docs/: API_REFERENCE.md
docs/cookbook/: README.md
docs/tutorials/doc-search/: README.md  description.md  metadata.md  semantics.md
docs/tutorials/tree-search/: README.md
notebooks/: agentic_retrieval.ipynb  pageIndex_chat_quickstart.ipynb  pageindex_RAG_simple.ipynb  vision_RAG_pageindex.ipynb
pageindex/: config.py  config.yaml  page_index.py  utils.py
pageindex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pageindex/core/: logging.py  pdf.py  tree.py
src/: analyze_notebooks.py  local_client_adapter.py  refactor_notebooks_logic.py  verify_adapter.py
src/pageindex/: cli.py  config.py  page_index.py  page_index_md.py  utils.py
src/pageindex/core/: llm.py  logging.py  pdf.py  tree.py
tests/: conftest.py  test_config.py  test_convert_physical_index.py  test_llm.py  test_logging.py  test_tree.py
