[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pageindex"
version = "0.1.0"
description = "Vectorless, reasoning-based RAG indexer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "openai==1.101.0",
  "pymupdf==1.26.4",
  "PyPDF2==3.0.1",
  "python-dotenv==1.1.0",
  "tiktoken==0.11.0",
  "pyyaml==6.0.2",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
]

[project.scripts]
pageindex = "pageindex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
